--- a/vignettes/get_started.Rmd
+++ b/vignettes/get_started.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(
 
 # Installation
 ```{r eval=FALSE}
-devtools::install_github('safetyGraphics/nepExplorer', ref = 'main')
+devtools::install_github("safetyGraphics/nepExplorer", ref = "main")
 ```
 
 # Setup
