--- a/vignettes/get_started.Rmd
+++ b/vignettes/get_started.Rmd
@@ -122,7 +122,7 @@ create_nepexplorer_app(
 - Ensure all required columns are present
 - Ensure lab results are in conventional units
 
-# safetyGraphics application
+# Integrating nepExplorer with safetyGraphics
 
 This nepExplorer charts can be added to the {safetyGraphics} shiny app, which allows us to create the charts with any mappings/data combination loaded in the app. The configuration will be captured in a [YAML](https://yaml.org/) file.
 
